--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DemoMongoose",
+  "name": "demo",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -12,7 +12,7 @@
     "debug": "*",
     "express": "*",
     "hbs": "^4.0.1",
-    "mongoose": "*",
+    "mongoose": "^8.10.0",
     "morgan": "*",
     "q": "*",
     "serve-favicon": "*",
